<resources>
    <string name="app_name">Bus Hero</string>
    <string name="bus_stop_distance">%d Metres</string>
    <string name="btn_nearer_text">Nearer</string>
    <string name="btn_further_text">Further</string>
    <string name="title_activity_map">Map</string>
    <string name="ic_back_content_description">Back</string>
    <string name="ic_bus_content_description">Bus</string>
    <string name="hypen">-</string>
    <string name="btn_back_text">Back</string>
    <string name="text_route_line" formatted="false">%s &#8211; %s</string>
    <string name="ic_clock_description">Clock</string>
    <string name="text_nearest_distance">%dM</string>
    <string name="text_favourites">Favourites</string>
    <string name="add_favourite_content_description">Add Favourite</string>
    <string name="text_nearest_bus_stops">Nearest Bus Stops</string>
    <string name="text_bus">Bus</string>
    <string name="button_remove_favourite">Remove Favourite</string>
    <string name="snackbar_live_message">New Live Bus Info</string>
    <string name="snackbar_live_update">Update?</string>
    <string name="progress_finding_location">Finding your location</string>
    <string name="progress_finding_nearest_stop">Finding nearest bus stop</string>
    <string name="progress_finding_live_buses">Loading live buses</string>
    <string name="progress_title">Loading</string>
    <string name="location_content_description">Location</string>
    <string name="favourite_content_description">Favourite</string>
    <string name="text_recent_routes">Recent Routes</string>
    <string name="btn_change_location">Change Location</string>
    <string name="title_activity_choose_location">Map</string>
    <string name="text_choose_location">Choose Location</string>
    <string name="marker_new_location">New Location</string>
    <string name="marker_you">You</string>
    <string name="error_permissions">Error: permissions</string>
    <string name="about_title">About</string>
    <string name="about_content_description">About</string>
    <string name="choose_location_content_description">Choose Location</string>
    <string name="about_text">Bus Hero was created as a project by students at City of Glasgow College in Glasgow, Scotland.</string>
    <string name="text_about_icon_title">Icons</string>
    <string name="text_about_icon_message">Icons made by Freepik and Scott de Jonge from www.flaticon.com</string>
    <string name="bearing_brackets" formatted="false">(%s)</string>
</resources>
