<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorVeryLightGrey"
    android:id="@+id/drawerLayout">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBlue"
            android:id="@+id/relativeMain"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="6dp">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_hamburger"
                    android:contentDescription="@string/app_name"
                    android:id="@+id/imageTimetable"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_centerVertical="true"
                    android:onClick="onClickOpenDrawer"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Gallery of Modern Art"
                    android:layout_toRightOf="@+id/imageTimetable"
                    android:layout_toEndOf="@+id/imageTimetable"
                    android:textColor="@color/colorVeryLightGrey"
                    android:textStyle="bold"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:id="@+id/textName"
                    android:onClick="onClickShowMap"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="23 Metres"
                    android:id="@+id/textDistance"
                    android:layout_below="@+id/textName"
                    android:layout_toRightOf="@+id/imageTimetable"
                    android:layout_toEndOf="@+id/imageTimetable"
                    android:textColor="@color/colorVeryLightGrey"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:onClick="onClickShowMap"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="North West"
                    android:id="@+id/textBearing"
                    android:layout_below="@+id/textName"
                    android:layout_toRightOf="@+id/textDistance"
                    android:layout_toEndOf="@+id/textDistance"
                    android:textColor="@color/colorVeryLightGrey"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:onClick="onClickShowMap"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Glasgow"
                    android:id="@+id/textLocality"
                    android:layout_below="@+id/textName"
                    android:layout_toRightOf="@+id/textBearing"
                    android:layout_toEndOf="@+id/textBearing"
                    android:textColor="@color/colorVeryLightGrey"
                    android:onClick="onClickShowMap"/>
            </RelativeLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listBuses"
            android:layout_below="@+id/relativeMain"
            android:layout_above="@+id/relativeButtons"
            android:dividerHeight="0dp"
            android:divider="@android:color/transparent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/relativeButtons">
            <ImageButton
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/ic_nearer"
                android:id="@+id/buttonNearer"
                android:background="@null"
                android:onClick="onClickNearer"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/btn_nearer_text"
                android:padding="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLocation"
                android:onClick="onClickChangeLocation"
                android:layout_centerInParent="true"
                tools:ignore="RelativeOverlap"
                android:paddingBottom="6dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="6dp"
                android:paddingEnd="6dp">
                <ImageButton
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_location"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:onClick="onClickChangeLocation"
                    android:contentDescription="@string/btn_change_location"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1234m"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/textLocationDistance"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/buttonFurther"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:src="@drawable/ic_further"
                tools:ignore="RelativeOverlap"
                android:onClick="onClickFurther"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/btn_further_text"
                android:padding="8dp"/>
        </RelativeLayout>
    </RelativeLayout>

    <include layout="@layout/drawer_main" android:id="@+id/drawerMain"/>
</android.support.v4.widget.DrawerLayout>